tests/snapshots/width_snapshots__delta_80.snap
---
source: tests/width_snapshots.rs
expression: "String::from_utf8(buf).expect(\"utf-8\")"
---
┌───┬───────┬───────┬────┬──────────────┬────────────────┬─────────────────────┐
│   ┆  CRAP ┆     Δ ┆ CC ┆ Coverage     ┆ Function       ┆ Location            │
╞═══╪═══════╪═══════╪════╪══════════════╪════════════════╪═════════════════════╡
│ ✗ ┆ 156.0 ┆ +46.0 ┆ 12 ┆ █░░░░  12.5% ┆ write_pr_comm… ┆ …/pr_comment.rs:388 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ▲ ┆  12.0 ┆ -30.0 ┆  3 ┆ ████░  80.0% ┆ parse_lcov     ┆ src/coverage.rs:149 │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✓ ┆   9.0 ┆       ┆  3 ┆ █████  90.0% ┆ normalize_exp… ┆ …/normalize.rs:487  │
├╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ✓ ┆   6.0 ┆   NEW ┆  2 ┆ █████ 100.0% ┆ brand_new_fun… ┆ …/layout.rs:30      │
└───┴───────┴───────┴────┴──────────────┴────────────────┴─────────────────────┘
Removed since baseline:
  —  old_helper (was 4.0)
↑ 1 regressed  ↓ 1 improved  ★ 1 new  ↔ 1 moved  · 0 unchanged  — 1 removed
